# Leauge-Icon-Selector

./: .gitignore  README.md  config.json  pyproject.toml
league-icon-selector/: __init__.py
league-icon-selector/blueprints/: api.py  frontend.py
league-icon-selector/extensions/LCUCommunicator/: lcu_communicator.py
league-icon-selector/extensions/LCUCommunicator/DTO/: IconDTO.py
league-icon-selector/static/: base.css  icon-selector.css  icon-selector.js
league-icon-selector/templates/: base.jinja  icon-selector.jinja
