[tool.poetry]
name = "league-icon-selector"
version = "0.1.0"
description = ""
authors = ["llllllllllllllll <llllllllllllllll>"]
readme = "README.md"
packages = [{include = "league_icon_selector"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
requests = "^2.31.0"
urllib3 = "^2.0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
